# bakery

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml
dj_tailwind_ko/: cookiecutter.json
dj_tailwind_ko/{{cookiecutter.project__slug}}/: .bumpversion.cfg  .env.example  .envrc.example  .gitignore  Makefile  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  webpack.config.js
dj_tailwind_ko/{{cookiecutter.project__slug}}/devops/azure/: azure-build.yml  azure-release.yml  azure-test.yml
dj_tailwind_ko/{{cookiecutter.project__slug}}/docker/: Dockerfile  Dockerfile.base  Makefile
dj_tailwind_ko/{{cookiecutter.project__slug}}/docker/etc/: circus.conf  entrypoint.sh
dj_tailwind_ko/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/: __init__.py
dj_tailwind_ko/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/admin/: adm.py
dj_tailwind_ko/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/api/: apps.py  urls.py
dj_tailwind_ko/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/config/: __init__.py  environ.py  settings.py  urls.py
dj_tailwind_ko/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/web/assets/: tw.css  tw.in.scss  widgets.scss
dj_tailwind_ko/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/web/assets/js/: app.js
dj_tailwind_ko/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/web/templates/: base.html  home.html
dj_tailwind_ko/{{cookiecutter.project__slug}}/tests/: test_z.py
dj_tailwind_ko/{{cookiecutter.project__slug}}/tools/dev/: initdb.sh
kt-django/: cookiecutter.json
kt-django/{{cookiecutter.project__slug}}/: .bumpversion.cfg  .env.example  .flake8  .gitignore  .isort.cfg  Makefile  package.json  pyproject.toml  system.py
kt-django/{{cookiecutter.project__slug}}/devops/azure/: azure-build.yml  azure-release.yml  azure-test.yml
kt-django/{{cookiecutter.project__slug}}/docker/: Dockerfile  Dockerfile.base  Makefile
kt-django/{{cookiecutter.project__slug}}/docker/etc/: circus.conf  entrypoint.sh
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/: __init__.py  exceptions.py  signals.py
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/cli/: __init__.py  utils.py
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/cli/commands/: upgrade.py
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/management/commands/: upgrade.py
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/utils/: reflect.py
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/{{cookiecutter.startingproject__name}}/: admin.py  apps.py
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/{{cookiecutter.startingproject__name}}/fixtures/: {{cookiecutter.startingproject__name}}_init.yaml
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/{{cookiecutter.startingproject__name}}/management/commands/: demo.py  utils.py
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/{{cookiecutter.startingproject__name}}/migrations/: 0001_initial.py
kt-django/{{cookiecutter.project__slug}}/src/{{cookiecutter.project__slug}}/{{cookiecutter.startingproject__name}}/models/: business.py  common.py
kt-django/{{cookiecutter.project__slug}}/tools/dev/: initdb.sh
mkdocs/: cookiecutter.json
mkdocs/{{cookiecutter.project__slug}}/: .gitignore  LICENSE.md  README.md  hello.py  mkdocs.yml  pyproject.toml
mkdocs/{{cookiecutter.project__slug}}/docs/: index.md
mkdocs/{{cookiecutter.project__slug}}/docs/_theme/js/: address.js
mkdocs/{{cookiecutter.project__slug}}/docs/examples/: blocks.md
mkdocs/{{cookiecutter.project__slug}}/docs/glossary/terms/: epic.md  user-story.md
