[tool.poetry]
name = "{{cookiecutter.project__slug}}"
version = "{{cookiecutter.project__version}}"
description = "{{cookiecutter.project__name}}"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "{{cookiecutter.project__slug}}", from="src" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "<4"
django-admin-extra-urls = "^3.3"
django-adminfilters = "^1.3.3"
django-click = "^2.2.0"
django-csp = "^3.7"
django-easy-audit = "^1.3.0"
django-environ = "^0.4.5"
django-extensions = "^3.0.2"
django-filter = "^2.4.0"
django-redis = "^4.12.1"
django-regex = "^0.4.1"
django_storages = "^1.10"
djangorestframework = "^3.11.1"
drf-querystringfilter = "^1.0.0"
redis = "^3.5.3"
sentry-sdk = "^0.18"
uwsgi = "^2.0.19"
django-js-reverse = "^0.9.1"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
django-debug-toolbar = "^3.1.1"
django-factory-boy = "^1.0.0"
django-storages = "^1.10"
django-webtest = "^1.9.7"
djt-csp = "^0.9.7"
flake8 = "^3.9.1"
ipython = "^7.20.0"
isort = "^5.8.0"
pre-commit = "^2.1.1"
pytest = "^6.2.3"
pytest-coverage = "^0.0"
pytest-django = "^3.9.0"
pytest-echo = "^1.7.1"
pytest-pythonpath = "^0.7.3"
tox = "^3.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
