[tool.poetry]
name = "{{cookiecutter.project__slug}}"
version = "{{cookiecutter.project__version}}"
description = "{{cookiecutter.project__name}}"
authors = ["{{cookiecutter.project__author}}"]
packages = [
    { include = "{{cookiecutter.project__slug}}", from="src" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3,<4"
django-click = ">=2.2.0"
django-environ = ">=0.5"
django-regex = ">=0.4.1"
sentry-sdk = ">=0.18"
uwsgi = ">=2.0.19"

[tool.poetry.dev-dependencies]
bumpversion = ">=0.6.0"
flake8 = ">=3.9.1"
ipython = ">=7.20.0"
isort = ">=5.8.0"
pre-commit = ">=2.1.1"
pytest = ">=6.2.3"
pytest-coverage = ">=0.0"
pytest-django = ">=3.9.0"
pytest-echo = ">=1.7.1"
pytest-pythonpath = ">=0.7.3"
pytest-env = ">=0.6.2"
tox = "^3.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
