[tool.poetry]
name = "{{cookiecutter.project__slug}}"
version = "{{cookiecutter.project__version}}"
description = "{{cookiecutter.project__name}}"
authors = ["{{cookiecutter.project__author}}"]
packages = [
    { include = "{{cookiecutter.project__slug}}", from="src" },
]

[tool.poetry.scripts]
{{cookiecutter.project__slug}} = '{{cookiecutter.project__slug}}.cli:main'


[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3,<4"
django-click = "*"
django-environ = "*"
django-regex = "*"
sentry-sdk = "*"
uwsgi = "*"
celery = "^5.1.2"
django-celery-beat = "^2.2.1"
django-strategy-field = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
flake8 = "*"
ipython = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-coverage = "*"
pytest-django = "*"
pytest-echo = "*"
pytest-pythonpath = "*"
pytest-env = "*"
tox = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
