[project]
name = "{{cookiecutter.project__slug}}"
version = "0.1.0"
description = "{{cookiecutter.project__name}}"
authors = [
    {name = "K-Tech", email = "info@k-tech.it"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyMarkdown>=0.1.4",
    "cairosvg>=2.7.1",
    "markupsafe>=2.1.5",
    "mdx-gh-links>=0.4",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-click>=0.8.1",
    "mkdocs-ezglossary-plugin>=1.6.10",
    "mkdocs-ezlinks-plugin>=0.1.14",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-link-marker>=0.1.3",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-material>=9.5.15",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.1",
    "pymdown-extensions>=10.7.1",
    "mkdocs-embed-external-markdown>=3.0.2",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-minify-plugin>=0.8.0",
    "pre-commit>=4.0.1",
]
